# notation-rs

./: Cargo.toml  notation-rs.code-workspace  readme_lines.md  test_note.json  test_notes.json
examples/: TestSuperscript1.fuse  ex1.rs  ex2.rs  ex3.rs  ex3A.playdata.json  ex3A.positions.json  graphicstest.rs
examples/testdata/: mod.rs
src/: bar.rs  beaming.rs  chord.rs  complex.rs  complexext.rs  constants.rs  core.rs  dynamic.rs  error.rs  experiment.rs  head.rs  heads.rs  lib.rs  note.rs  noterects.rs  notes.rs  part.rs  prelude.rs  qcode.rs  quick.rs  spacing.rs  syllable.rs  tools.rs  utils.rs  voice.rs  voices.rs
src/bar/: bar.rs  bars.rs  mod.rs
src/bar/bars/: mod.rs  playback.rs  resolve.rs
src/beamgroup/: beamgroup.rs  calc.rs  mod.rs
src/calc/: mod.rs
src/part/: mod.rs  part.rs
src/render/: mod.rs  render_items.rs  testdata.rs
src/render/fonts/: Merriweather_Regular_sizes.rs  mod.rs  opensans_regular_sizes.rs
src/render/items/: mod.rs  rcol.rs  ritem.rs  rmatrix.rs  rrow.rs  rutils.rs
src/tools/: pair_iterator.rs
src/types/: mod.rs  some_cloneables.rs
