[package]
name = "notation-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
itertools = "0.11.0"
thiserror = "1.0.43"
# serde = { version = "1.0.171", features = ["derive", "rc"] }
# serde_json = "1.0.102"

[dev-dependencies]
graphics = { path = "../../GRAPHICS/graphics" }
render_notation = { path = "../../NOTATION/render_notation" }
